Fix dark-mode secondary-text contrast; add notice-bg token
Dark mode set --global-text-color and --global-text-color-light to the same
value, flattening the secondary-text hierarchy. Introduce AA-compliant
secondary-text tokens (light #6b6b6b, dark #9aa0a6) and a notice-bg token.

--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -6,7 +6,7 @@
   --global-bg-color: #{$white-color};
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
-  --global-text-color-light: #{$grey-color};
+  --global-text-color-light: #{$text-secondary-light};
   --global-theme-color: #{$accent-color-light};
   --global-hover-color: #{$accent-color-light};
   --global-hover-text-color: #{$white-color};
@@ -16,6 +16,7 @@
   --global-distill-app-color: #{$grey-color};
   --global-divider-color: rgba(0, 0, 0, 0.1);
   --global-card-bg-color: #{$white-color};
+  --global-notice-bg: #{$notice-bg-light};
 
   --global-tip-block: #42b983;
   --global-tip-block-bg: #e2f5ec;
@@ -53,7 +54,7 @@ html[data-theme="dark"] {
   --global-bg-color: #{$grey-color-dark};
   --global-code-bg-color: #{$code-bg-color-dark};
   --global-text-color: #{$grey-color-light};
-  --global-text-color-light: #{$grey-color-light};
+  --global-text-color-light: #{$text-secondary-dark};
   --global-theme-color: #{$accent-color-dark};
   --global-hover-color: #{$accent-color-dark};
   --global-hover-text-color: #{$grey-color-dark};
@@ -63,6 +64,7 @@ html[data-theme="dark"] {
   --global-distill-app-color: #{$grey-color-light};
   --global-divider-color: #424246;
   --global-card-bg-color: #{$grey-900};
+  --global-notice-bg: #{$notice-bg-dark};
 
   --global-tip-block: #42b983;
   --global-tip-block-bg: #e2f5ec;
